--- a/assets/jogo-da-memoria.css
+++ b/assets/jogo-da-memoria.css
@@ -63,12 +63,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 16px;
+        font-size: 60px;
+        /* font-size: 16px; */
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f8c471;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
+    text-align: cenfrutas2[i];
 }
 
 .flashcard-back {
