--- a/assets/jogo-da-memoria.css
+++ b/assets/jogo-da-memoria.css
@@ -28,8 +28,10 @@ body {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; /* Centraliza as cartas */
-    gap: 10px; /* Espaço entre cartas */
+    justify-content: center;
+    /* Centraliza as cartas */
+    gap: 10px;
+    /* Espaço entre cartas */
     padding: 10px;
     margin-bottom: 30px;
     border-radius: 10px;
@@ -63,13 +65,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-        font-size: 60px;
-        /* font-size: 16px; */
+    font-size: 60px;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f8c471;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: cenfrutas2[i];
+}
+
+.flashcard-front {
+    font-size: 20px;
 }
 
 .flashcard-back {
@@ -120,13 +125,15 @@ body {
 
 /* Modal Vitória */
 .vitoria {
-    background-color: #28a745; /* Verde */
+    background-color: #28a745;
+    /* Verde */
     color: white;
 }
 
 /* Modal Derrota */
 .derrota {
-    background-color: #dc3545; /* Vermelho */
+    background-color: #dc3545;
+    /* Vermelho */
     color: white;
 }
 
@@ -146,8 +153,15 @@ button:hover {
 
 /* Animação */
 @keyframes fadeIn {
-    from { opacity: 0; transform: scale(0.9); }
-    to { opacity: 1; transform: scale(1); }
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 
@@ -163,9 +177,8 @@ button:hover {
         height: 62.5px;
     }
 
-    .flashcard-front, .flashcard-back {
+    .flashcard-front,
+    .flashcard-back {
         font-size: 30px;
     }
 }
-
-
