--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         <h1>Jogo da Memória</h1>
 
         <div>
-            <input type="text" id="username" placeholder="Seu nome" required>
+            <input type="text" id="username" placeholder="Seu nome" required autofocus>
             <div class="badge" id="user-badge"></div>
             <input type="text" id="room-code" placeholder="Código da Sala" required>
             <div class="badge" id="room-badge"></div>
