--- a/views/game.ejs
+++ b/views/game.ejs
@@ -7,7 +7,7 @@
   <title>Sala de Jogo</title>
 </head>
 
-<body onload="fecharModal('modal-vitoria'); fecharModal('modal-derrota');">
+<body>
   <div class="header">
     <h1>Sala: <%= roomCode %></h1>
     <div class="jogadores">
@@ -33,24 +33,6 @@
 
   <div class="container">
     <div id="board"></div>
-  </div>
-
-  <!-- Modal de Vitória -->
-  <div id="modal-vitoria" class="modal">
-    <div class="modal-content vitoria">
-      <h2>🎉 Vitória!</h2>
-      <p>Parabéns! Você completou o desafio!</p>
-      <button onclick="fecharModal('modal-vitoria')">OK</button>
-    </div>
-  </div>
-
-  <!-- Modal de Derrota -->
-  <div id="modal-derrota" class="modal">
-    <div class="modal-content derrota">
-      <h2>💀 Derrota!</h2>
-      <p>O tempo acabou! Tente novamente.</p>
-      <button onclick="fecharModal('modal-derrota')">Tentar de Novo</button>
-    </div>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
