--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,6 @@ input {
     justify-content: center;
 }
 
-
 img {
     height: 30px;
 }
@@ -76,5 +75,49 @@ button:hover {
 .badge {
     color: rgba(255, 255, 255, 0.6);
     text-align: start;
+}
+
+/* tirar daquii, somente em 'games.css' */
+.confirm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.confirm.ed {
+    background-color: rgb(208, 208, 208);
+}
+
+.confirm:hover {
+    transform: scale(1);
+}
+
+.modal {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+.modal-content {
+    background: linear-gradient(135deg, #2264C8, #A515A5);
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
+    width: 500px;
+    max-width: 100%;
+}
+
+.ok:hover {
+    transform: scale(1);
 }
 
