--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -47,6 +47,28 @@ body {
     width: 30px;
 }
 
+.sair {
+    position: absolute;
+    top: 35px;
+    left: 35px;
+}
+
+/* deixar aqui, em 'games.css' */
+.confirm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.confirm.ed {
+    background-color: rgb(208, 208, 208);
+}
+
+.confirm:hover {
+    transform: scale(1);
+}
+
 /* ------------------------------------------------------- container ------------------------------------------------------- */
 .head {
     text-align: center;
@@ -112,6 +134,38 @@ body {
     transform: rotateY(180deg);
 }
 
+
+#modal-confirm {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+#modal-confirm .modal-content {
+    background: linear-gradient(135deg, #2264C8, #A515A5);
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(10px);
+    width: 500px;
+    max-width: 100%;
+}
+
+#modal-confirm .modal-content button {
+    width: 100%;
+}
+
+img {
+    height: 30px;
+}
 
 /* Modal padrão */
 .modal {
