--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,10 +25,13 @@
     <div class="modal">
         <div class="modal-content">
             <h1>Seja bem-vindo ao Jogo da Memória Multiplayer!</h1>
-            <p>Crie ou entre em salas para jogar contra amigos.</p>
-            <p>Para jogar, escolha duas cartas no tabuleiro e elas devem ser iguais.</p>
-            <p>Vence a pessoa que conseguir acertar todas as cartas antes que o seu adversário.</p>
-            <p>Para sair da sala, clique no botão "Sair".</p>
+            <ol>
+                <li>Crie ou entre em salas para jogar contra amigos.</li>
+                <li>Para jogar, escolha duas cartas no tabuleiro e elas devem ser iguais.</li>
+                <li>Vence a pessoa que conseguir acertar mais cartas que seu adversário.</li>
+                <li>NOTA: se recarregar a página durante a partida, será reinicializada!</li>
+                <li>Para sair da sala, clique no botão "Sair".</li>
+            </ol>
             <button class="btn ok" onclick="fechar_modal()">
                 OK, entendi
             </button>
